--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -1,12 +1,13 @@
 version: '3'
 services:
   generatedata:
-    image: mvisonneau/generatedata:latest
+    image: chuckpilon/generatedata:latest
     environment:
       GD_DB_HOSTNAME: mysql
       GD_DB_NAME: generatedata
       GD_DB_USERNAME: root
       GD_DB_PASSWORD: UnSecUr3dPassW0rd
+      GD_DEFAULT_NUM_ROWS: 10000000
     ports:
       - 8000:80
     links:
